Added a couple operator functions, an operate function aswell as started on making the calcultor with HTMl/CSS

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,7 +9,18 @@
     <script src=script.js defer></script>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <div id=container>
+        <div id='calcBody'>
+
+
+        </div>
+    </div>
+    <div id=footer>
+        Copyright © Kabir Virk 2023
+    </div>
+
 </body>
+
 </html>
