--- a/index.html
+++ b/index.html
@@ -6,21 +6,44 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
-    <script src=script.js defer></script>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <div id=container>
+    <div id="container">
         <div id='calcBody'>
-
-
+            <div id="calcDisplay">
+                <!-- Calculator display content will go here -->
+            </div>
+            <div id="calcButtonsContainer">
+                <div id="calcButtons2">
+                    <button>Clear</button>
+                    <button>Delete</button>
+                </div>
+                <div id="calcButtons">
+                    <button>7</button>
+                    <button>8</button>
+                    <button>9</button>
+                    <button>÷</button>
+                    <button>4</button>
+                    <button>5</button>
+                    <button>6</button>
+                    <button>x</button>
+                    <button>1</button>
+                    <button>2</button>
+                    <button>3</button>
+                    <button>-</button>
+                    <button>.</button>
+                    <button>0</button>
+                    <button>=</button>
+                    <button>+</button>
+                </div>
+            </div>
         </div>
     </div>
-    <div id=footer>
+    <div id="footer">
         Copyright © Kabir Virk 2023
     </div>
-
 </body>
 
 </html>
